crates/backyard-lexer/tests/snapshots/inline__inline_echo.snap
---
source: crates/backyard-lexer/tests/inline.rs
expression: tokens
snapshot_kind: text
---
- token_type: Inline
  value:
    - 60
    - 100
    - 105
    - 118
    - 62
  line: 1
  column: 0
  offset: 0
- token_type: Echo
  value:
    - 101
    - 99
    - 104
    - 111
  line: 1
  column: 0
  offset: 0
- token_type: Variable
  value:
    - 97
  line: 1
  column: 9
  offset: 9
- token_type: Inline
  value:
    - 60
    - 47
    - 100
    - 105
    - 118
    - 62
  line: 1
  column: 12
  offset: 12
